feature: add questions and tooltip

--- a/src/components/CreateQuestions/styles.module.css
+++ b/src/components/CreateQuestions/styles.module.css
@@ -1,10 +1,18 @@
 .create {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+
+.header {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
+  margin-top: 1rem;
 }
