--- a/src/components/Questions/List/Item/styles.module.css
+++ b/src/components/Questions/List/Item/styles.module.css
@@ -1,4 +1,11 @@
+.item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .button {
+  flex: 1;
   margin: 0.5rem;
   background-color: transparent;
   padding: 0.5rem;
@@ -21,4 +28,21 @@
 .answer {
   font-size: 0.9rem;
   font-weight: 200;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.submit {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.submit > button {
+  flex: 1 1 200px;
 }
